[package]
name = "aoc1"
version = "0.1.0"
authors = ["Karol Milewczyk <kmilewczyk96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
anyhow = "1.0"
itertools = "0.9"
